--- a/Src/UIs/serverDialog.ui
+++ b/Src/UIs/serverDialog.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>388</width>
-    <height>175</height>
+    <height>189</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -106,13 +106,16 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>130</y>
-     <width>121</width>
+     <y>160</y>
+     <width>266</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
