--- a/Src/UIs/mainWindow.ui
+++ b/Src/UIs/mainWindow.ui
@@ -58,6 +58,9 @@
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
     </property>
+    <property name="placeholderText">
+     <string>Type your message here...</string>
+    </property>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
