--- a/Src/UIs/SignatureWarnDialog.ui
+++ b/Src/UIs/SignatureWarnDialog.ui
@@ -2,25 +2,22 @@
 <ui version="4.0">
  <class>Dialog</class>
  <widget class="QDialog" name="Dialog">
-  <property name="enabled">
-   <bool>true</bool>
-  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>388</width>
-    <height>189</height>
+    <width>400</width>
+    <height>260</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>PyChat Client - Username</string>
+   <string>Dialog</string>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>155</x>
-     <y>125</y>
+     <x>200</x>
+     <y>220</y>
      <width>171</width>
      <height>32</height>
     </rect>
@@ -35,87 +32,84 @@
     <bool>false</bool>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
-   <property name="geometry">
-    <rect>
-     <x>50</x>
-     <y>45</y>
-     <width>271</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="layoutDirection">
-    <enum>Qt::LeftToRight</enum>
-   </property>
-   <property name="text">
-    <string>127.0.0.1</string>
-   </property>
-   <property name="maxLength">
-    <number>50</number>
-   </property>
-   <property name="dragEnabled">
-    <bool>false</bool>
-   </property>
-  </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>20</y>
-     <width>271</width>
-     <height>21</height>
+     <x>160</x>
+     <y>35</y>
+     <width>70</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Enter the server's hostname/IPv4 address:</string>
+    <string>WARNING</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>60</x>
      <y>70</y>
-     <width>271</width>
-     <height>16</height>
+     <width>280</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Enter the port:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_2">
-   <property name="geometry">
-    <rect>
-     <x>50</x>
-     <y>90</y>
-     <width>271</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>7000</string>
-   </property>
-   <property name="maxLength">
-    <number>5</number>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="enabled">
-    <bool>true</bool>
-   </property>
-   <property name="geometry">
-    <rect>
-     <x>50</x>
-     <y>160</y>
-     <width>266</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
+    <string>The Signature of the server at:</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>100</y>
+     <width>330</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>host</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>39</x>
+     <y>120</y>
+     <width>321</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Has changed. The authenticity of the server and the privacy of your discussions may be at risk. Contact the server administrator for more information.</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>200</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Proceed to connect?</string>
    </property>
   </widget>
  </widget>
